--- a/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/User/Login.cshtml
@@ -84,6 +84,7 @@
                                                     <button class="btn btn-primary w-100 waves-effect waves-light">Log In <i class="fas fa-sign-in-alt ms-1"></i></button>
                                                 </div>
                                             </div> 
+                                            @Html.HiddenFor(x=>x.ReturnUrl)
                                         }
                                     </div>
                                 </div>
