--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -22,7 +22,7 @@
     <link rel="shortcut icon" href="~/favicon.ico">
 
     <!-- jvectormap -->
-    <link href="./Dastone - Admin &amp; Dashboard Template_files/jquery-jvectormap-2.0.2.css" rel="stylesheet">
+    @*<link href="~/css/layout/jquery-jvectormap-2.0.2.css" rel="stylesheet">*@
 
     <!-- App css -->
     <link href="~/css/layout/bootstrap.min.css" rel="stylesheet" type="text/css">
@@ -107,7 +107,7 @@
     <footer class="footer text-center text-sm-start">
         <div class="boxed-footer">
             Copyright © Coditech Software Pvt. Ltd @System.DateTime.Now.Year
-            <span class="text-muted d-none d-sm-inline-block float-end">Crafted with <i class="mdi mdi-heart text-danger"></i> by Mannatthemes</span>
+            @*<span class="text-muted d-none d-sm-inline-block float-end">Crafted with <i class="mdi mdi-heart text-danger"></i> by Mannatthemes</span>*@
         </div>
     </footer>
 
@@ -121,11 +121,11 @@
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
     <script src="~/js/layout/daterangepicker.js"></script>
+  @*  <script src="~/js/layout/jquery-jvectormap-2.0.2.min.js"></script>
+    <script src="~/js/layout/jquery-jvectormap-us-aea-en.js"></script>*@
+@*    <script src="~/js/layout/apexcharts.min.js"></script>
 
-    <script src="~/js/layout/apexcharts.min.js"></script>
-    <script src="~/js/layout/jquery-jvectormap-2.0.2.min.js"></script>
-    <script src="~/js/layout/jquery-jvectormap-us-aea-en.js"></script>
-    <script src="~/js/layout/jquery.analytics_dashboard.init.js"></script>
+    <script src="~/js/layout/jquery.analytics_dashboard.init.js"></script>*@
     
     <script src="~/js/layout/app.js"></script>
 </body>
