check-in list page changes

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Index.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Dashboard/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div class="page-content">
+﻿@{
+    ViewBag.Title = "Dashboard";
+}<div class="page-content">
     <div class="container-fluid">
         <!-- Page-Title -->
         <div class="row">
