--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -11,7 +11,6 @@
 <html lang="en">
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-
     <title>@ViewData["Title"] - Coditech.Admin</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta content="" name="description">
@@ -25,11 +24,13 @@
     @*<link href="~/css/layout/jquery-jvectormap-2.0.2.css" rel="stylesheet">*@
 
     <!-- App css -->
-    <link href="~/css/layout/bootstrap.min.css" rel="stylesheet" type="text/css">
-    <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css">
-    <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css">
-    <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css">
+    <link href="~/css/layout/bootstrap.min.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/layout/icons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/layout/metisMenu.min.css" rel="stylesheet" type="text/css"/>
+    <link href="~/css/layout/daterangepicker.css" rel="stylesheet" type="text/css"/>
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
+    <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
 </head>
 
 <body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="">
@@ -121,6 +122,10 @@
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
     <script src="~/js/layout/daterangepicker.js"></script>
+@*    <script src="~/js/layout/jquery.datatables.min.js"></script>
+    <script src="~/js/layout/datatables.bootstrap5.min.js"></script>
+    <script src="~/js/layout/datatables.buttons.min.js"></script>
+    <script src="~/js/layout/datatables.responsive.min.js"></script>*@
   @*  <script src="~/js/layout/jquery-jvectormap-2.0.2.min.js"></script>
     <script src="~/js/layout/jquery-jvectormap-us-aea-en.js"></script>*@
 @*    <script src="~/js/layout/apexcharts.min.js"></script>
