--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableSearchData.cshtml
@@ -8,7 +8,7 @@
     <div id="datatable_filter" class="dataTables_filter">
         <label>
             Search:
-            <input type="text" class="form-control form-control-sm" value="@Model">
+            <input id="DataTables_SearchById" type="text" class="form-control form-control-sm" value="@Model">
             <a onclick="CoditechDataTable.LoadList('@controllerName','@actionName')"><i class="fas fa-search" title="Search"></i></a>
         </label>
     </div>
