--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -122,17 +122,10 @@
     <script src="~/js/layout/simplebar.min.js"></script>
     <script src="~/js/layout/moment.js"></script>
     <script src="~/js/layout/daterangepicker.js"></script>
-@*    <script src="~/js/layout/jquery.datatables.min.js"></script>
-    <script src="~/js/layout/datatables.bootstrap5.min.js"></script>
-    <script src="~/js/layout/datatables.buttons.min.js"></script>
-    <script src="~/js/layout/datatables.responsive.min.js"></script>*@
-  @*  <script src="~/js/layout/jquery-jvectormap-2.0.2.min.js"></script>
-    <script src="~/js/layout/jquery-jvectormap-us-aea-en.js"></script>*@
-@*    <script src="~/js/layout/apexcharts.min.js"></script>
-
-    <script src="~/js/layout/jquery.analytics_dashboard.init.js"></script>*@
-    
     <script src="~/js/layout/app.js"></script>
+    <!-- coditech script-->
+    <script src="~/js/coditech/common/coditechdatatable.js"></script>
+    <script src="~/js/coditech/common/coditechnotification.js"></script>
 </body>
 @await RenderSectionAsync("Scripts", required: false)
 </html>
