--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/List.cshtml
@@ -3,7 +3,6 @@
 @{
     ViewBag.Title = "Department List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    int count = 0;
 }
 <!-- Page Content-->
 <div class="page-content">
@@ -37,42 +36,8 @@
                     <p class="text-muted mb-0"></p>
                     </div><!--end card-header-->*@
                     <div class="card-body">
-                        <div id="datatable_wrapper" class="dataTables_wrapper dt-bootstrap5 no-footer">
-                            <div class="row">
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
-                                @Html.Partial("~/Views/Shared/Datatable/_DatatableSearchData.cshtml", Model.PageListViewModel.SearchBy)
-                            </div>
-                            <div class="row">
-                                <div class="col-sm-12">
-                                    <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-                                        <thead>
-                                            <tr role="row">
-                                                <th class="sorting sorting_asc" tabindex="0">Department Name</th>
-                                                <th class="sorting" tabindex="0">Department Code</th>
-                                                <th class="sorting" tabindex="0">Print Short Desc</th>
-                                                <th style="width:10%;">Action</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-
-                                            @foreach (var item in Model?.GeneralDepartmentList)
-                                            {
-                                                string classRow = count % 2 == 0 ? "even" : "odd";
-                                                <tr class="@classRow">
-                                                    <td tabindex="0" class="sorting_1 highlight">@item.DepartmentName</td>
-                                                    <td>@item.DepartmentShortCode</td>
-                                                    <td>@item.PrintShortDesc</td>
-                                                    <td style="text-align:center">
-                                                        <a href="../@controllerName/Edit?departmentId=@item.GeneralDepartmentMasterId" title="Update"><i class="fas fa-edit me-2"></i></a>|
-                                                        <a href="../@controllerName/Delete?departmentIds=@item.GeneralDepartmentMasterId" title="Delete"><i class="fas fa-times-circle me-2"></i></a>
-                                                    </td>
-                                                </tr>
-                                            }
-                                        </tbody>
-                                    </table>
-                                </div>
-                            </div>
-                            @Html.Partial("~/Views/Shared/Datatable/_DatatablePagination.cshtml", Model.PageListViewModel)
+                        <div id="DataTablesDivId" class="dataTables_wrapper dt-bootstrap5 no-footer">
+                            @Html.Partial("~/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml", Model)
                         </div>
                     </div>
                 </div>
