--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableShowResult.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatableShowResult.cshtml
@@ -10,10 +10,10 @@
     showList.Add(100);
 }
 <div class="col-sm-12 col-md-6">
-    <div class="dataTables_length" id="datatable_length">
+    <div class="dataTables_length">
         <label>
             Show
-            <select name="datatable_length" aria-controls="datatable" class="form-select form-select-sm" onchange="CoditechDataTable.LoadList('@controllerName','@actionName')">
+            <select id="DataTables_PageSizeId" aria-controls="datatable" class="form-select form-select-sm" onchange="CoditechDataTable.LoadList('@controllerName','@actionName')">
                 @foreach (var i in showList)
                 {
                     if (Model == i)
