--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
@@ -14,22 +14,14 @@
                 <div class="page-title-box">
                     <div class="row">
                         <div class="col">
-                            @*<h4 class="page-title">Form Elements</h4>*@
-                            <ol class="breadcrumb">
-                                <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
-                                <li class="breadcrumb-item"><a href="javascript:void(0);">Forms</a></li>
-                                <li class="breadcrumb-item active">Form Elements</li>
-                            </ol>
-                        </div><!--end col-->
-                        <div class="col-auto align-self-center">
-                            @* <a href="https://mannatthemes.com/dastone/default/forms-elements.html#" class="btn btn-sm btn-outline-primary" id="Dash_Date">
-                            <span class="day-name" id="Day_Name">Today:</span>&nbsp;
-                            <span class="" id="Select_date">Jul 15</span>
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-calendar align-self-center icon-xs ms-1"><rect x="3" y="4" width="18" height="18" rx="2" ry="2"></rect><line x1="16" y1="2" x2="16" y2="6"></line><line x1="8" y1="2" x2="8" y2="6"></line><line x1="3" y1="10" x2="21" y2="10"></line></svg>
-                            </a>
-                            <a href="https://mannatthemes.com/dastone/default/forms-elements.html#" class="btn btn-sm btn-outline-primary">
-                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-download align-self-center icon-xs"><path d="M21 15v4a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2v-4"></path><polyline points="7 10 12 15 17 10"></polyline><line x1="12" y1="15" x2="12" y2="3"></line></svg>
-                            </a>*@
+                            @if (Model.GeneralDepartmentMasterId > 0)
+                            {
+                                <h4 class="page-title">Update Department</h4>
+                            }
+                            else
+                            {
+                                <h4 class="page-title">Create Department</h4>
+                            }
                         </div><!--end col-->
                     </div><!--end row-->
                 </div><!--end page-title-box-->
@@ -39,17 +31,6 @@
         <div class="row">
             <div class="col-lg-12">
                 <div class="card">
-                    <div class="card-header">
-                        @if (Model.GeneralDepartmentMasterId > 0)
-                        {
-                            <h4 class="card-title">Update Department</h4>
-                        }
-                        else
-                        {
-                            <h4 class="card-title">Create Department</h4>
-                        }
-                        @*<p class="text-muted mb-0">Basic example to demonstrate Bootstrap’s form styles.</p>*@
-                    </div><!--end card-header-->
                     <div class="card-body">
                         @using (Html.BeginForm(actionName, controllerName, FormMethod.Post))
                         {
@@ -83,8 +64,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-primary">Save</button>
-                            <a href="../@controllerName/List" class="btn btn-danger"><i class="ft-x"></i>Cancel</a>
+                            <button type="submit" class="btn btn-success">Save</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>Cancel</a>
                         }
                     </div>
                 </div>
