--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
@@ -28,9 +28,9 @@
                             <td tabindex="0" class="sorting_1">@item.DepartmentName</td>
                             <td>@item.DepartmentShortCode</td>
                             <td>@item.PrintShortDesc</td>
-                            <td style="text-align:center">
-                                <a href="../@controllerName/Edit?generalDepartmentId=@item.GeneralDepartmentMasterId" title="Update"><i class="fas fa-edit me-2"></i></a>|
-                                <a href="../@controllerName/Delete?departmentIds=@item.GeneralDepartmentMasterId" title="Delete"><i class="fas fa-times-circle me-2"></i></a>
+                            <td class="text-center">
+                                <a href="../@controllerName/Edit?generalDepartmentId=@item.GeneralDepartmentMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
+                                <a href="../@controllerName/Delete?departmentIds=@item.GeneralDepartmentMasterId" title="Delete"><i class="fas fa-times-circle"></i></a>
                             </td>
                         </tr>
                     }
