Resource file changes

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.ViewModel
-@model GeneralDepartmentViewModel
+﻿@model GeneralDepartmentViewModel
 @{
     ViewBag.Title = "Add Department";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -64,8 +63,8 @@
                                     </div>
                                 </div>
                             </div>
-                            <button type="submit" class="btn btn-success">Save</button>
-                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>Cancel</a>
+                            <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
+                            <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
                         }
                     </div>
                 </div>
