--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.ViewModel
-@model GeneralDepartmentListViewModel
+﻿@model GeneralDepartmentListViewModel
 @{
     ViewBag.Title = "Department List";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -13,7 +12,7 @@
                 <div class="page-title-box">
                     <div class="row">
                         <div class="col">
-                            <h4 class="page-title">Department List</h4>
+                            <h4 class="page-title">@AdminResources.LabelDepartmentList</h4>
                             @* <ol class="breadcrumb">
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Dastone</a></li>
                             <li class="breadcrumb-item"><a href="javascript:void(0);">Tables</a></li>
