--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
@@ -1,5 +1,4 @@
-﻿@using Coditech.Admin.ViewModel;
-@model GeneralDepartmentListViewModel
+﻿@model GeneralDepartmentListViewModel
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
@@ -13,10 +12,10 @@
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
             <thead>
                 <tr role="row">
-                    <th class="sorting sorting_asc" tabindex="0">Department Name</th>
+                    <th class="sorting sorting_asc">Department Name</th>
                     <th class="sorting" tabindex="0">Department Code</th>
                     <th class="sorting" tabindex="0">Print Short Desc</th>
-                    <th style="width:10%;text-align:center">Action</th>
+                    <th class="text-center" style="width:10%;">@AdminResources.LabelAction</th>
                 </tr>
             </thead>
             <tbody>
