--- a/Coditech.Project/Admin/Coditech.Admin/Views/_ViewImports.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/_ViewImports.cshtml
@@ -1,2 +1,5 @@
 ﻿@using Coditech.Admin
+@using Coditech.Resources
+@using System.Web
+@using Coditech.Admin.ViewModel
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
