--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,9 @@
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
+    <style>
+
+    </style>
 </head>
 
 <body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="">
