--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/Datatable/_DatatablePagination.cshtml
@@ -36,6 +36,8 @@
                 </ul>
             </div>
         </div>
+        @Html.Hidden("DataTables_SortColumn",@Model.SortByColumn)
+        @Html.Hidden("DataTables_SortBy",@Model.SortBy)
     }
     else
     {
