--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/_List.cshtml
@@ -2,6 +2,7 @@
 @{
     Layout = null;
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
+    string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
 <div class="row">
     @Html.Partial("~/Views/Shared/Datatable/_DatatableShowResult.cshtml", Model.PageListViewModel.RecordPerPage)
@@ -10,21 +11,14 @@
 <div class="row">
     <div class="col-sm-12">
         <table id="datatable" class="table table-striped table-bordered dt-responsive nowrap dataTable no-footer dtr-inline" style="border-collapse: collapse; border-spacing: 0px; width: 100%;" role="grid" aria-describedby="datatable_info">
-            <thead>
-                <tr role="row">
-                    <th class="sorting sorting_asc">Department Name</th>
-                    <th class="sorting" tabindex="0">Department Code</th>
-                    <th class="sorting" tabindex="0">Print Short Desc</th>
-                    <th class="text-center" style="width:10%;">@AdminResources.LabelAction</th>
-                </tr>
-            </thead>
+            @Html.Partial("~/Views/Shared/Datatable/_DatatableColumns.cshtml", Model.PageListViewModel)
             <tbody>
                 @if (Model?.GeneralDepartmentList?.Count > 0)
                 {
                     foreach (var item in Model?.GeneralDepartmentList)
                     {
                         <tr>
-                            <td tabindex="0" class="sorting_1">@item.DepartmentName</td>
+                            <td>@item.DepartmentName</td>
                             <td>@item.DepartmentShortCode</td>
                             <td>@item.PrintShortDesc</td>
                             <td class="text-center">
