--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDepartmentMaster/CreateEdit.cshtml
@@ -1,6 +1,6 @@
 ﻿@model GeneralDepartmentViewModel
 @{
-    ViewBag.Title = "Add Department";
+    ViewBag.Title = Model.GeneralDepartmentMasterId > 0 ? "Update Department" : "Add Department";
     string controllerName = ViewContext.RouteData.Values["controller"].ToString();
     string actionName = ViewContext.RouteData.Values["action"].ToString();
 }
@@ -37,9 +37,9 @@
                             <div class="row">
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DepartmentName, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.DepartmentName, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.DepartmentName, new { @class = "form-control"})
-                                        @Html.ValidationMessageFor(x => x.DepartmentName, null, new { @class = "required" })
+                                        @Html.ValidationMessageFor(x => x.DepartmentName)
                                     </div>
                                     <div class="mb-3">
                                         <div class="form-check">
@@ -50,16 +50,16 @@
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.DepartmentShortCode, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.DepartmentShortCode, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.DepartmentShortCode, new { @class = "form-control"})
-                                        @Html.ValidationMessageFor(x => x.DepartmentShortCode, null, new { @class = "required" })
+                                        @Html.ValidationMessageFor(x => x.DepartmentShortCode)
                                     </div>
                                 </div>
                                 <div class="col-lg-4">
                                     <div class="mb-3">
-                                        @Html.LabelFor(x => x.PrintShortDesc, new { @class = "form-label" })
+                                        @Html.LabelFor(x => x.PrintShortDesc, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.PrintShortDesc, new { @class = "form-control"})
-                                        @Html.ValidationMessageFor(x => x.PrintShortDesc, null, new { @class = "required" })
+                                        @Html.ValidationMessageFor(x => x.PrintShortDesc)
                                     </div>
                                 </div>
                             </div>
