--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/_List.cshtml
@@ -20,10 +20,12 @@
                         <tr>
                             <td>@item.CountryName</td>
                             <td>@item.CountryCode</td>
-                            <td>@item.DefaultFlag</td>
+                            <td>
+                                @Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)
+                            </td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?generalCountryId=@item.GeneralCountryMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?countryIds=@item.GeneralCountryMasterId" title="Delete"><i class="fas fa-times-circle"></i></a>
+                                <a href="../@controllerName/Delete?countryIds=@item.GeneralCountryMasterId" title="Delete"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
