--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/_List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralNationalityMaster/_List.cshtml
@@ -19,10 +19,10 @@
                     {
                         <tr>
                             <td>@item.Description</td>
-                            <td>@item.DefaultFlag</td>
+                            <td>@Html.Partial("~/Views/Shared/Datatable/_DatatableTrueFalse.cshtml", item.DefaultFlag)</td>
                             <td class="text-center">
                                 <a href="../@controllerName/Edit?nationalityId=@item.GeneralNationalityMasterId" title="Update"><i class="fas fa-edit"></i></a><span class="m-2">|</span>
-                                <a href="../@controllerName/Delete?nationalityIds=@item.GeneralNationalityMasterId" title="Delete"><i class="fas fa-times-circle"></i></a>
+                                <a href="../@controllerName/Delete?nationalityIds=@item.GeneralNationalityMasterId" title="Delete"><i class="fas fa-trash-alt"></i></a>
                             </td>
                         </tr>
                     }
