Code Correction for General Tax Group Master .

--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralTaxGroupMaster/CreateEdit.cshtml
@@ -43,12 +43,20 @@
                                         @Html.ValidationMessageFor(x => x.TaxGroupName)
                                     </div>
                                 </div>
-                                <div class="col-lg-4">
+                                <div class="col-lg-6">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.GeneralTaxMasterIds, new { @class = "form-label required" })
-                                        @* @Html.ListBoxFor(x => x.GeneralTaxMasterIds,new SelectList(Model.AllTaxList, "GeneralTaxMasterId", "TaxName"))
-                                        @Html.ValidationMessageFor(x => x.GeneralTaxMasterIds) *@
+                                        @Html.ListBoxFor(m => m.GeneralTaxMasterIds, new SelectList(Model.AllTaxList, "GeneralTaxMasterId", "TaxName"))
+                                        @Html.ValidationMessageFor(x => x.GeneralTaxMasterIds)
                                     </div>
+                                </div>
+                                <div class="col-lg-4">
+                                      <div class="mb-3">
+                                    <div class="form-check">
+                                        @Html.CheckBoxFor(x => x.IsOtherState, new { @class = "form-check-input" })
+                                        @Html.LabelFor(x => x.IsOtherState, new { @class = "form-check-label" })
+                                    </div>
+                                </div>
                                 </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
