--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralCountryMaster/CreateEdit.cshtml
@@ -50,12 +50,21 @@
                                         @Html.ValidationMessageFor(x => x.CountryCode)
                                     </div>
                                 </div>
-                                @*<div class="mb-3">
-                                    <div class="form-check">
-                                        @Html.CheckBoxFor(x => x.DefaultFlag, new { @class = "form-check-input" })
-                                        @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-check-label" })
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        @Html.LabelFor(x => x.SeqNo, new { @class = "form-label required" })
+                                        @Html.TextBoxFor(x => x.SeqNo, new { @class = "form-control"})
+                                        @Html.ValidationMessageFor(x => x.SeqNo)
                                     </div>
-                                </div>*@
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.DefaultFlag, new { @class = "form-check-input" })
+                                            @Html.LabelFor(x => x.DefaultFlag, new { @class = "form-check-label" })
+                                        </div>
+                                    </div>
+                                </div>
                             </div>
                             <button type="submit" class="btn btn-success">@AdminResources.LabelSave</button>
                             <a href="../@controllerName/List" class="btn btn-secondary"><i class="ft-x"></i>@AdminResources.LabelCancel</a>
