--- a/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/GeneralMaster/GeneralDesignationMaster/CreateEdit.cshtml
@@ -57,11 +57,27 @@
                                         @Html.ValidationMessageFor(x => x.DesignationLevel)
                                     </div>
                                 </div>
+                               @*  <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                            @Html.LabelFor(x => x.IsActive, new { @class = "form-check-label" })
+                                        </div>
+                                    </div>
+                                </div> *@
                                 <div class="col-lg-4">
                                     <div class="mb-3">
                                         @Html.LabelFor(x => x.Grade, new { @class = "form-label required" })
                                         @Html.TextBoxFor(x => x.Grade, new { @class = "form-control"})
                                         @Html.ValidationMessageFor(x => x.Grade)
+                                    </div>
+                                </div>
+                                <div class="col-lg-4">
+                                    <div class="mb-3">
+                                        <div class="form-check">
+                                            @Html.CheckBoxFor(x => x.IsActive, new { @class = "form-check-input" })
+                                            @Html.LabelFor(x => x.IsActive, new { @class = "form-check-label" })
+                                        </div>
                                     </div>
                                 </div>
                             </div>
