--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -3,8 +3,11 @@
 @model UserModel
 @{
     Layout = null;
-    string controllerName = ViewContext.RouteData.Values["controller"].ToString();
-    string actionName = controllerName?.ToLower() == "dashboard" ? "Index" : "List";
+    string controllerName = Convert.ToString(ViewContext.RouteData.Values["controller"]).ToLower();
+    string actionName = Convert.ToString(ViewContext.RouteData.Values["action"]).ToLower();
+    UserMenuModel userMenuModel = Model?.MenuList?.FirstOrDefault(x => x.ControllerName == controllerName && x.ActionName == actionName);
+    List<UserMenuModel> menuList = Model?.MenuList?.Where(x => x.ModuleCode == userMenuModel.ModuleCode)?.ToList();
+    string moduleName = Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode)?.ModuleName;
 }
 
 <li class="has-submenu">
@@ -14,43 +17,20 @@
                 <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"></path>
                 <polyline points="9 22 9 12 15 12 15 22"></polyline>
             </svg>
-            @Model.SelectedModuleName
+            @moduleName
         </span>
     </a>
     <ul class="submenu">
         @foreach (UserModuleModel item in Model?.ModuleList)
         {
             <li>
-                <a href="/User/GetMenuListByModuleCode?moduleCode=@item.ModuleCode&controllerName=@controllerName&method=@actionName">
+                <a href="/@item.DefaultMenuLink">
                     <i class="ti ti-minus"></i>@item.ModuleName
                 </a>
             </li>
         }
     </ul><!--end submenu-->
-   @* <ul class="submenu megamenu">
-        <li>
-            <ul>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-alerts.html"><i class="ti ti-minus"></i>Alerts</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-avatar.html"><i class="ti ti-minus"></i>Avatar</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-buttons.html"><i class="ti ti-minus"></i>Buttons</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-badges.html"><i class="ti ti-minus"></i>Badges</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-cards.html"><i class="ti ti-minus"></i>Cards</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-carousels.html"><i class="ti ti-minus"></i>Carousels</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-check-radio.html"><i class="ti ti-minus"></i>Check &amp; Radio</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-dropdowns.html"><i class="ti ti-minus"></i>Dropdowns</a></li>
-            </ul>
-        </li>
-        <li>
-            <ul>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-grids.html"><i class="ti ti-minus"></i>Grids</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-images.html"><i class="ti ti-minus"></i>Images</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-list.html"><i class="ti ti-minus"></i>List</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-modals.html"><i class="ti ti-minus"></i>Modals</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-navs.html"><i class="ti ti-minus"></i>Navs</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-navbar.html"><i class="ti ti-minus"></i>Navbar</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-paginations.html"><i class="ti ti-minus"></i>Paginations</a></li>
-                <li><a href="https://mannatthemes.com/dastone/default/ui-offcanvas.html"><i class="ti ti-minus"></i>Offcanvas</a></li>
-            </ul>
-        </li>
-    </ul>*@
 </li><!--end has-submenu-->
+<!-- BEGIN: Main Menu-->
+@Html.Partial("~/Views/Shared/_MenuList.cshtml", menuList)
+<!-- END: Main Menu-->
