Admin Role Edit

--- a/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/List.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Admin/AdminRoleMaster/List.cshtml
@@ -23,9 +23,7 @@
                             <li class="breadcrumb-item active">Datatables</li>
                             </ol>*@
                         </div><!--end col-->
-                        <div class="col-auto align-self-center">
-                            <a class=" btn btn-sm btn-soft-primary" href="/@controllerName/Create" role="button"><i class="fas fa-plus me-2"></i>Add Admin Sanction Post</a>
-                        </div><!--end col-->
+                       <!--end col-->
                     </div><!--end row-->
                 </div><!--end page-title-box-->
             </div><!--end col-->
