--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_ModuleList.cshtml
@@ -5,7 +5,7 @@
     Layout = null;
     string controllerName = Convert.ToString(ViewContext.RouteData.Values["controller"]).ToLower();
     string actionName = Convert.ToString(ViewContext.RouteData.Values["action"]).ToLower();
-    UserMenuModel userMenuModel = Model?.MenuList?.FirstOrDefault(x => x.ControllerName == controllerName && x.ActionName == actionName);
+    UserMenuModel userMenuModel = Model?.MenuList?.FirstOrDefault(x => x.ControllerName == controllerName);
     List<UserMenuModel> menuList = Model?.MenuList?.Where(x => x.ModuleCode == userMenuModel.ModuleCode)?.ToList();
     string moduleName = Model?.ModuleList?.FirstOrDefault(x => x.ModuleCode == userMenuModel.ModuleCode)?.ModuleName;
 }
