--- a/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
+++ b/Coditech.Project/Admin/Coditech.Admin/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
     <link href="~/css/layout/app.min.css" rel="stylesheet" type="text/css">
     <link href="~/css/layout/datatables.bootstrap5.min.css" rel="stylesheet" type="text/css" />
     <link href="~/css/layout/buttons.bootstrap5.min.css" rel="stylesheet" />
+    <link href="~/css/layout/bootstrap-select.min.css" rel="stylesheet" />
 </head>
 
 <body data-layout="horizontal" class="dark-topbar" data-new-gr-c-s-check-loaded="14.1113.0" data-gr-ext-installed="">
@@ -121,6 +122,7 @@
     <script src="~/js/layout/moment.js"></script>
     <script src="~/js/layout/daterangepicker.js"></script>
     <script src="~/js/layout/app.js"></script>
+    <script src="~/js/layout/bootstrap-select.min.js"></script>
     <!-- coditech script-->
     <script src="~/js/coditech/common/coditechcommon.js"></script>
     <script src="~/js/coditech/common/coditechdatatable.js"></script>
